--- a/src/app/pages/materials-asm1/materials-asm1.component.html
+++ b/src/app/pages/materials-asm1/materials-asm1.component.html
@@ -53,6 +53,7 @@
               <i class="material-icons">merge_type</i>
               🔄 Gộp dữ liệu
             </a>
+
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="downloadFIFOReportASM1()">
               <i class="material-icons">warning</i>
@@ -139,12 +140,15 @@
             <i class="material-icons">restart_alt</i>
             Reset
           </button>
+
         </div>
         
         <!-- Negative Stock Counter Box -->
-        <div class="negative-stock-counter-box">
-          <i class="material-icons">warning</i>
-          <span>Mã âm: {{ getNegativeStockCount() }}</span>
+        <div class="negative-stock-counter-box" 
+             [class.has-negative]="getNegativeStockCount() > 0"
+             [title]="getNegativeStockCount() > 0 ? 'Có ' + getNegativeStockCount() + ' mã hàng có tồn kho âm. Tồn kho âm được chấp nhận và hiển thị đầy đủ.' : 'Không có mã hàng nào có tồn kho âm'">
+          <i class="material-icons">{{ getNegativeStockCount() > 0 ? 'warning' : 'check_circle' }}</i>
+          <span>{{ getNegativeStockCount() > 0 ? 'Mã âm: ' + getNegativeStockCount() : 'Tồn kho OK' }}</span>
         </div>
         
         <!-- Catalog Ready Icon -->
@@ -182,6 +186,8 @@
             <th>Loại Hình</th>
 
             <th>Rolls/Bags</th>
+            <th>Lưu ý</th>
+            <th>Standard Packing</th>
             <th>Trạng thái</th>
             <th>Xóa</th>
             <th>QR</th>
@@ -244,6 +250,17 @@
                      (change)="updateMaterial(material)" 
                      min="0" 
                      placeholder="Rolls/Bags">
+            </td>
+            <td class="notes-cell">
+              <input type="text" 
+                     class="editable-input" 
+                     [(ngModel)]="material.remarks" 
+                     (change)="updateRemarks(material)"
+                     placeholder="Nhập lưu ý..."
+                     title="Lưu ý từ inbound">
+            </td>
+            <td class="standard-packing-cell">
+              <span class="standard-packing-value">{{ getStandardPacking(material.materialCode) }}</span>
             </td>
             <td class="status-cell">
               <span class="badge" 
