--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -72,6 +72,12 @@
               <i class="material-icons">cleaning_services</i>
               Làm sạch dữ liệu
             </a>
+            
+            <!-- Debug Inventory Stock -->
+            <a class="dropdown-item" href="javascript:void(0)" (click)="debugMaterialStock('B017008', 'KZPO0625/0105'); closeDropdown()">
+              <i class="material-icons">search</i>
+              Kiểm tra B017008 từ Inventory
+            </a>
           </div>
         </div>
         
